Fix overflow of Modals in Chrome and Safari

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -27,6 +27,7 @@
 }
 
 .euiModal--maxWidth-default {
+  width: 100%; // Needed for IE
   max-width: map-get($euiBreakpoints, 'm');
 }
 
@@ -51,6 +52,9 @@
   @include euiOverflowShadow;
   flex-grow: 1;
   overflow: hidden;
+  // The below fixes scroll on Chrome and Safari
+  display: flex;
+  flex-direction: column;
 
   .euiModalBody__overflow {
     @include euiScrollBar;
